--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -25,5 +25,8 @@
     <!-- Doze: does this device support STATE_DOZE and STATE_DOZE_SUSPEND?  -->
     <bool name="doze_display_state_supported">true</bool>
     <bool name="doze_pulse_on_pick_up">true</bool>
+     
+    <!-- Whether to enable data switch or not -->
+    <bool name="config_enableDataSwitch">true</bool>
 
 </resources>
