--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -40,8 +40,8 @@
             5 - In-app Search
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
-    -->
-<integer name="config_longPressOnHomeBehavior">0</integer>
+
+    <integer name="config_longPressOnHomeBehavior">0</integer>
 
     <bool name="config_automatic_brightness_available">true</bool>
 
@@ -85,9 +85,6 @@
         <item>255</item>
         <item>255</item>
     </integer-array>
-
-    <!-- Boolean indicating if current platform supports BLE peripheral mode -->
-    <bool name="config_bluetooth_le_peripheral_mode_supported">false</bool>
 
     <!-- Boolean indicating whether the wifi chipset has dual frequency band support -->
     <bool translatable="false" name="config_wifi_dual_band_support">true</bool>
@@ -151,10 +148,6 @@
 
     <!-- Make things go fast -->
     <bool name="config_ui_enableFadingMarquee">true</bool>
-
-    <!-- Configuration to restart radio upon PDP_DEACTIVATE with
-         error cause as Regular deactivation(36). -->
-    <bool name="config_restart_radio_on_pdp_fail_regular_deactivation">false</bool>
 
     <string-array translatable="false" name="networkAttributes">
         <item>"wifi,1,1,1,-1,true"</item>
@@ -238,7 +231,7 @@
     <!-- Is the device capable of hot swapping an ICC Card -->
     <bool name="config_hotswapCapable">true</bool>
  
-    <integer-array name="config_autoBrightnessButtonBacklightValues
+    <integer-array name="config_autoBrightnessButtonBacklightValues">
         <item>255</item>
         <item>255</item>
         <item>255</item>
@@ -315,8 +308,7 @@
 
     <!-- Flag specifying whether WFC over IMS is available on device -->
     <bool name="config_device_wfc_ims_available">true</bool>
-                                                
-     
+
     <!-- The RadioAccessFamilies supported by the device.
          Empty is viewed as "all".  Only used on devices which
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
