--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -8,6 +8,8 @@
     <item name="wifi.on">5</item>
     <item name="wifi.active">200</item>
     <item name="wifi.scan">100</item>
+    <item name="camera.flashlight">0.1</item>
+    <item name="camera.avg">0.1</item>
     <item name="dsp.audio">100</item>
     <item name="dsp.video">100</item>
     <item name="radio.active">300</item>
@@ -31,15 +33,15 @@
 	<item name="cpu.awake">62</item>
     <array name="cpu.active">
         <value>82.4</value>
-		<value>110.1</value>
-		<value>120.7</value>
-		<value>140.0</value>
-		<value>170.0</value>
-		<value>215.0</value>
-		<value>244.0</value>
-		<value>256.0</value>
+	<value>110.1</value>
+	<value>120.7</value>
+	<value>140.0</value>
+	<value>170.0</value>
+	<value>215.0</value>
+	<value>244.0</value>
+	<value>256.0</value>
     </array>
-    <item name="battery.capacity">3500</item>
+    <item name="battery.capacity">3000</item>
     <array name="wifi.batchedscan">
         <value>.2</value>
         <value>2</value>
