--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The CyanogenMod Project
+<!-- Copyright (C) 2017 The lineageOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -12,10 +12,11 @@
 -->
 
 <resources>
-  <bool name="has_led_flash">true</bool>
-  <bool name="config_show_volumeRockerWake">true</bool>
-
- <!-- Using this on MSIM devices leads to weird states that break telephony's
- internal state machine. All MSIM devices should probably set this to "true"-->
- <bool name="config_disablePreferredNetworkSwitch" translatable="false">true</bool>
+  <!-- Defines the location of the fingerprint sensor on the device
+       0 = back
+       1 = front
+       2 = left side
+       3 = right side
+  -->
+  <integer name="config_fingerprintSensorLocation">0</integer>
 </resources>
