--- a/overlay/packages/apps/Snap/res/values/config.xml
+++ b/overlay/packages/apps/Snap/res/values/config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
-                   2015-2016 The CyanogenMod Project
+<!-- Copyright (C) 2017 The lineageOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -22,10 +21,10 @@
     <bool name="front_camera_restart_preview_onPictureTaken">true</bool>
 
     <!-- Opens back camera using openLegacy() -->
-    <bool name="back_camera_open_legacy">true</bool>
+    <bool name="back_camera_open_legacy">false</bool>
 
     <!-- Opens front camera using openLegacy() -->
-    <bool name="front_camera_open_legacy">true</bool>
+    <bool name="front_camera_open_legacy">false</bool>
 
     <!-- This value may be tweaked to save memory on low RAM devices. The value
          is the percentage of camera preview height/width to scale to. -->
